--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -19,36 +19,39 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/graphql": "^6.4.2",
-    "@nestjs/mongoose": "^6.1.2",
-    "@nestjs/platform-express": "^6.0.0",
-    "apollo-server": "^2.7.0",
-    "apollo-server-express": "^2.7.0",
-    "graphql": "^14.4.2",
-    "graphql-tools": "^4.0.5",
-    "mongoose": "^5.6.6",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "type-graphql": "^0.17.4"
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/graphql": "^7.10.3",
+    "@nestjs/mongoose": "^7.2.4",
+    "@nestjs/platform-express": "^7.6.15",
+    "apollo-server": "^2.23.0",
+    "apollo-server-express": "^2.23.0",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
+    "mongoose": "^5.12.4",
+    "node-cleanup": "^2.1.2",
+    "npm-check-updates": "^11.4.1",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.7",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
-    "@nestjs/testing": "6.1.1",
-    "@types/express": "4.16.1",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.4",
-    "@types/supertest": "2.0.7",
-    "jest": "24.7.1",
-    "prettier": "1.17.0",
-    "supertest": "4.0.2",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.1.0",
-    "tsc-watch": "2.2.1",
-    "tsconfig-paths": "3.8.0",
-    "tslint": "5.16.0",
-    "typescript": "3.4.3"
+    "@nestjs/testing": "7.6.15",
+    "@types/express": "4.17.11",
+    "@types/jest": "26.0.22",
+    "@types/node": "14.14.41",
+    "@types/supertest": "2.0.11",
+    "@types/ws": "^7.4.1",
+    "jest": "26.6.3",
+    "prettier": "2.2.1",
+    "supertest": "6.1.3",
+    "ts-jest": "26.5.5",
+    "ts-node": "9.1.1",
+    "tsc-watch": "^4.2.9",
+    "tsconfig-paths": "^3.4.2",
+    "tslint": "5.20.1",
+    "typescript": "4.2.4"
   },
   "jest": {
     "moduleFileExtensions": [
